2003-07-17  Dennis Cranston <dennis_cranston at yahoo com>

	* font-properties.glade:  Some HIGification of the dialog.
	Fixes some of ui-review bug #98922.
	
2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

Wed Jan 15 12:50:34 2003  Jonathan Blandford  <jrb@redhat.com>

	* main.c (cb_details_response): run "nautilus --no-desktop
	fonts:///" if button pressed.

	(cb_show_details): show a 'Go to font folder' button if fonts:///
	exists.

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-13  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* main.c: Added the "desktop_font" key directory to the list
	of directories GConfClient will watch for changes.
	Fixes Bug #94766.

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

Fri Nov  1 18:21:22 2002  Jonathan Blandford  <jrb@gnome.org>

	* main.c: remove the duplicate #defined key.

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=95807
	From  sylvain_pasche@yahoo.fr
	* main.c (open_pattern) : Add a safety check.

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-19  Ross Burton  <ross@burtonini.com>

	* font-properties.desktop.in: Fix the desktop file so that it
	validates.

2002-08-19  Jody Goldberg <jody@gnome.org>

	* font-properties.glade :