@@ -1,3 +1,8 @@
+Sat Aug  2 01:16:16 2003  Jonathan Blandford  <jrb@gnome.org>
+
+	* main.c (application_font_to_gconf): Warn when a font larger than
+	31 points is selected, #97653.
+
 2003-07-17  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* font-properties.glade:  Some HIGification of the dialog.
